<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ohmsCalc"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OhmsCalculator">

    <TextView
        android:id="@+id/voltId"
        android:layout_width="130dp"
        android:layout_height="42dp"
        android:gravity="center"
        android:text="@string/voltage_v"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.202"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.149" />

    <TextView
        android:id="@+id/resistanceId"
        android:layout_width="130dp"
        android:layout_height="42dp"
        android:gravity="center"
        android:text="@string/resistance_r"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.202"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.313" />

    <TextView
        android:id="@+id/powerId"
        android:layout_width="130dp"
        android:layout_height="42dp"
        android:gravity="center"
        android:text="@string/power_p"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.202"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.39" />

    <TextView
        android:id="@+id/currentId"
        android:layout_width="130dp"
        android:layout_height="42dp"
        android:gravity="center"
        android:text="@string/current_i"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/voltId"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.235" />

    <EditText
        android:id="@+id/voltTxt"
        android:layout_width="150dp"
        android:layout_height="42dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/enter_voltage"
        android:inputType="numberDecimal"
        android:textDirection="ltr"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.831"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.149" />

    <EditText
        android:id="@+id/currentTxt"
        android:layout_width="150dp"
        android:layout_height="42dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/enter_current"
        android:inputType="numberDecimal"
        android:textDirection="ltr"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.831"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.235" />

    <EditText
        android:id="@+id/powerTxt"
        android:layout_width="150dp"
        android:layout_height="42dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/enter_power"
        android:inputType="numberDecimal"
        android:textDirection="ltr"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.831"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.39" />

    <EditText
        android:id="@+id/resistanceTxt"
        android:layout_width="150dp"
        android:layout_height="42dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/enter_resistance_ohm"
        android:inputType="numberDecimal"
        android:textDirection="ltr"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.831"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.313" />

    <TextView
        android:id="@+id/titleId"
        android:layout_width="363dp"
        android:layout_height="60dp"
        android:gravity="center_horizontal"
        android:text="@string/ohm_s_law_calculator"
        android:textSize="27sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.043" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="264dp"
        android:layout_height="246dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.901"
        app:srcCompat="@drawable/ohm_law" />

    <Button
        android:id="@+id/calcId"
        android:layout_width="138dp"
        android:layout_height="36dp"
        android:gravity="center_horizontal"
        android:onClick="calculate"
        android:text="@string/calculateOhm"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.179"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.499" />

    <Button
        android:id="@+id/resetId"
        android:layout_width="138dp"
        android:layout_height="36dp"
        android:layout_marginEnd="44dp"
        android:layout_marginRight="44dp"
        android:gravity="center_horizontal"
        android:onClick="resetFields"
        android:text="@string/resetOhm"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.499" />


</androidx.constraintlayout.widget.ConstraintLayout>