<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/pt100Calc"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="app.example.elconproject.Pt100Calculator">

    <TextView
        android:id="@+id/tempPTId"
        android:layout_width="160dp"
        android:layout_height="42dp"
        android:layout_marginEnd="232dp"
        android:layout_marginRight="232dp"
        android:gravity="center"
        android:text="@string/temperature_deg"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.148" />

    <RadioGroup
        android:id="@+id/checkPT"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:background="#024CAF50"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.122"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.264">

        <RadioButton
            android:id="@+id/radioButton1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/colorPrimary"
            android:gravity="center_horizontal"
            android:text="@string/pt100"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/colorPrimary"
            android:gravity="center_horizontal"
            android:text="@string/pt500"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/colorPrimary"
            android:gravity="center_horizontal"
            android:text="@string/pt1000"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp" />
    </RadioGroup>

    <TextView
        android:id="@+id/resPTId"
        android:layout_width="160dp"
        android:layout_height="42dp"
        android:gravity="center"
        android:text="@string/resistance_ohm"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.071"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.416" />

    <EditText
        android:id="@+id/tempPT_txt"
        android:layout_width="150dp"
        android:layout_height="42dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/enter_temperature"
        android:inputType="numberSigned|numberDecimal"
        android:textDirection="ltr"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.904"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.148" />

    <EditText
        android:id="@+id/resPT_txt"
        android:layout_width="150dp"
        android:layout_height="42dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/enter_resistance_pt"
        android:inputType="numberSigned|numberDecimal"
        android:textDirection="ltr"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.904"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.416" />

    <ImageView
        android:id="@+id/down_arrowId"
        android:layout_width="112dp"
        android:layout_height="105dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.809"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.26"
        app:srcCompat="@drawable/down_arrow_image" />

    <ImageView
        android:id="@+id/up_arrowId"
        android:layout_width="112dp"
        android:layout_height="105dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.839"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.26"
        app:srcCompat="@drawable/up_arrow_image" />

    <TextView
        android:id="@+id/titlePTId"
        android:layout_width="363dp"
        android:layout_height="70dp"
        android:gravity="center_horizontal"
        android:text="@string/pt_calculator_temperature_to_resistance"
        android:textSize="27sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.375"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.048" />

    <Button
        android:id="@+id/calcPTId"
        android:background="@drawable/custom_rounded_corners_blue"
        android:layout_width="138dp"
        android:layout_height="36dp"
        android:gravity="center_horizontal"
        android:onClick="calculate"
        android:text="@string/calculatePT"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.065"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.568" />

    <Button
        android:id="@+id/resetPTId"
        android:background="@drawable/custom_rounded_corners_red"
        android:layout_width="138dp"
        android:layout_height="36dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:gravity="center_horizontal"
        android:onClick="resetFields"
        android:text="@string/resetPT"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.568" />

    <ImageView
        android:id="@+id/ptImageId"
        android:layout_width="268dp"
        android:layout_height="207dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.968"
        app:srcCompat="@drawable/rtd_image" />

    <ImageView
        android:id="@+id/changeArrowsId"
        android:layout_width="61dp"
        android:layout_height="74dp"
        android:onClick="changeImage"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.572"
        app:srcCompat="@drawable/change_arrows_image" />

</androidx.constraintlayout.widget.ConstraintLayout>