<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/awgCalc"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AwgCalculator">

    <TextView
        android:id="@+id/awgId"
        android:layout_width="145dp"
        android:layout_height="42dp"
        android:layout_marginEnd="224dp"
        android:layout_marginRight="224dp"
        android:gravity="center"
        android:text="@string/awg"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.265" />

    <TextView
        android:id="@+id/mmId"
        android:layout_width="145dp"
        android:layout_height="44dp"
        android:gravity="center"
        android:text="@string/diameter_in_mm"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.157"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.339" />

    <TextView
        android:id="@+id/square_mmId"
        android:layout_width="145dp"
        android:layout_height="46dp"
        android:gravity="center"
        android:text="@string/area_in_mm_2"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.157"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.42" />

    <EditText
        android:id="@+id/mm_txt"
        android:layout_width="150dp"
        android:layout_height="42dp"
        android:editable="false"
        android:ems="10"
        android:gravity="center"
        android:inputType="none"
        android:textDirection="ltr"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.804"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.341" />

    <EditText
        android:id="@+id/mm_2_txt"
        android:layout_width="150dp"
        android:layout_height="42dp"
        android:editable="false"
        android:ems="10"
        android:gravity="center"
        android:inputType="none"
        android:textDirection="ltr"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.804"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.417" />

    <EditText
        android:id="@+id/awg_txt"
        android:layout_width="150dp"
        android:layout_height="42dp"
        android:ems="10"
        android:gravity="center"
        android:inputType="numberDecimal"
        android:textDirection="ltr"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.804"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.265" />

    <TextView
        android:id="@+id/titleAwgId"
        android:layout_width="363dp"
        android:layout_height="70dp"
        android:gravity="center_horizontal"
        android:text="@string/awg_to_mm_conversion_calculator"
        android:textSize="27sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.024" />

    <Button
        android:id="@+id/calcAwgId"
        android:layout_width="138dp"
        android:layout_height="36dp"
        android:gravity="center_horizontal"
        android:onClick="calculate"
        android:text="@string/calculatePT"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.153"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.568" />

    <Button
        android:id="@+id/resetAwgId"
        android:layout_width="138dp"
        android:layout_height="36dp"
        android:layout_marginEnd="48dp"
        android:layout_marginRight="48dp"
        android:gravity="center_horizontal"
        android:onClick="resetFields"
        android:text="@string/resetPT"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.568" />

    <Spinner
        android:id="@+id/awgSpinner"
        android:layout_width="170dp"
        android:layout_height="70dp"
        android:drawSelectorOnTop="true"
        android:dropDownSelector="@color/colorPrimary"
        android:gravity="center"
        android:overScrollMode="ifContentScrolls"
        android:padding="5dip"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.157" />

    <ImageView
        android:id="@+id/table_image"
        android:layout_width="307dp"
        android:layout_height="215dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.937"
        app:srcCompat="@drawable/awg_table" />

</androidx.constraintlayout.widget.ConstraintLayout>

